force-app/main/default/objects/I_ST_Student_Course__c/I_ST_Student_Course__c.object-meta.xml
<CustomObject>
    <description>Junction object between Student (Contact) and Course (Course Availability)</description>
    <label>Student Course</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Student Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>