force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Achieved_Credit_Points__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Achieved_Credit_Points__c</fullName>
    <description>Achieved Credit Points as per IST-77</description>
    <label>Achieved Credit Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>