force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Admission_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Admission_Change_Date__c</fullName>
    <label>Admission Change Date</label>
    <type>Date</type>
</CustomField>