force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus__c</fullName>
    <formula>I_ST_CourseAvailability__r.L_AD_CourseInstance__r.L_AD_Campus_Name__c</formula>
    <label>Campus</label>
    <type>Text</type>
</CustomField>