force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_College__c.field-meta.xml
<CustomField>
    <fullName>I_ST_College__c</fullName>
    <formula>I_ST_CourseAvailability__r.I_ST_College__c</formula>
    <label>College</label>
    <type>Text</type>
</CustomField>