force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Course_Admission_Stage_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Admission_Stage_Code__c</fullName>
    <description>IST-168</description>
    <label>Course Admission Stage Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>