force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Course_Admission_Stage_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Admission_Stage_Desc__c</fullName>
    <description>for IST-168</description>
    <label>Course Admission Stage Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>