force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Course_Admission_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Admission_Status_Code__c</fullName>
    <description>for IST-168</description>
    <label>Course Admission Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>