force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Course_Admission_Status_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Admission_Status_Desc__c</fullName>
    <label>Course Admission Status Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>