force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_CourseAvailability__c.field-meta.xml
<CustomField>
    <fullName>I_ST_CourseAvailability__c</fullName>
    <description>Course availability linkage as per IST-43,IST-168</description>
    <label>Course Availability</label>
    <referenceTo>CourseAvailability__c</referenceTo>
    <relationshipLabel>Student Courses</relationshipLabel>
    <relationshipName>Student_Courses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>