force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ExternalId__c</fullName>
    <description>Unique foreign key for integration with value of the concatenation of Contact Id and Course Availability Code</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>