force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_OfferStatus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_OfferStatus__c</fullName>
    <description>for IST-242</description>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Rescinded</fullName>
            </value>
            <value>
                <fullName>Unoffered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>