force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Potential_Credit_Points__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Potential_Credit_Points__c</fullName>
    <description>Potential Credit Points as per IST77</description>
    <label>Potential Credit Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>