force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_School__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School__c</fullName>
    <formula>I_ST_CourseAvailability__r.I_ST_School__c</formula>
    <label>School</label>
    <type>Text</type>
</CustomField>