force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Selected_Course_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Selected_Course_Run_Date__c</fullName>
    <label>Selected Course Run Date</label>
    <type>DateTime</type>
</CustomField>