force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Semester__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Semester__c</fullName>
    <formula>TEXT(I_ST_CourseAvailability__r.L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <label>Semester</label>
    <type>Text</type>
</CustomField>