force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Status__c</fullName>
    <description>for IST-168</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>