force-app/main/default/objects/I_ST_Student_Course__c/fields/I_ST_Student__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Student__c</fullName>
    <description>Student lookup as per IST-43,IST-168</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Courses</relationshipLabel>
    <relationshipName>Student_Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>