force-app/main/default/objects/I_ST_Student_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>I_ST_Student__c</columns>
    <columns>I_ST_Course_Admission_Stage_Code__c</columns>
    <columns>I_ST_Course_Admission_Status_Code__c</columns>
    <columns>I_ST_OfferStatus__c</columns>
    <columns>I_ST_Enrolled_Credit_Points__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>I_ST_Course_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>